force-app/main/default/objects/Individu_Paneliste__c/Individu_Paneliste__c.object-meta.xml
<CustomObject>
    <label>Individu Panéliste</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de l&apos;individu panéliste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individus Panélistes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>