force-app/main/default/objects/Individu_Paneliste__c/fields/Badge_gamification__c.field-meta.xml
<CustomField>
    <fullName>Badge_gamification__c</fullName>
    <label>Badge gamification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coton</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Argent</fullName>
            </value>
            <value>
                <fullName>Or</fullName>
            </value>
            <value>
                <fullName>Platine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>