force-app/main/default/objects/Individu_Paneliste__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Browser</label>
    <type>Checkbox</type>
</CustomField>