force-app/main/default/objects/Individu_Paneliste__c/fields/Composition_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Composition_du_foyer__c</fullName>
    <label>Composition du foyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Paneliste</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>