force-app/main/default/objects/Individu_Paneliste__c/fields/CON_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>CON_EXTId_SIPanel__c</fullName>
    <description>&quot;(UUID) c&apos;est l&apos;id salesforce de l&apos;enregistrement Composition Du Foyer Parent
Ce champ sert a identifier l&apos;enregistrement parent (Composition Du Foyer) de l&apos;Individu Panéliste&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CON_EXTId_SIPanel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>