force-app/main/default/objects/Individu_Paneliste__c/fields/Date_d_entree_de_l_individu__c.field-meta.xml
<CustomField>
    <fullName>Date_d_entree_de_l_individu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;entrée de l&apos;individu</label>
    <type>Date</type>
</CustomField>