force-app/main/default/objects/Individu_Paneliste__c/fields/date_d_entree_superieur_quinze__c.field-meta.xml
<CustomField>
    <fullName>date_d_entree_superieur_quinze__c</fullName>
    <formula>IF(   YEAR(TODAY())   -  YEAR( Date_d_entree_de_l_individu__c) &gt;=  15, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date d&apos;entree superieur quinze</label>
    <type>Checkbox</type>
</CustomField>