force-app/main/default/objects/Individu_Paneliste__c/fields/Date_de_chute_de_l_individu__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chute_de_l_individu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de chute de l&apos;individu</label>
    <type>Date</type>
</CustomField>