force-app/main/default/objects/Individu_Paneliste__c/fields/Date_de_derniere_activite_mobile__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_activite_mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de dernière activité mobile</label>
    <type>Date</type>
</CustomField>