force-app/main/default/objects/Individu_Paneliste__c/fields/Date_de_freeze__c.field-meta.xml
<CustomField>
    <fullName>Date_de_freeze__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de freeze</label>
    <type>Date</type>
</CustomField>