force-app/main/default/objects/Individu_Paneliste__c/fields/Date_de_premiere_activite_browser__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_activite_browser__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de première activité browser</label>
    <type>Date</type>
</CustomField>