force-app/main/default/objects/Individu_Paneliste__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Individus Panélistes</relationshipLabel>
    <relationshipName>Individus_Paneliste</relationshipName>
    <type>Lookup</type>
</CustomField>