force-app/main/default/objects/Individu_Paneliste__c/fields/Foyer_paneliste_Affichage__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste_Affichage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Individus Panélistes</relationshipLabel>
    <relationshipName>Individus_Panelistes</relationshipName>
    <type>Lookup</type>
</CustomField>