force-app/main/default/objects/Individu_Paneliste__c/fields/Frequence_de_connexion_mobile__c.field-meta.xml
<CustomField>
    <fullName>Frequence_de_connexion_mobile__c</fullName>
    <label>Fréquence de connexion mobile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tous les jours</fullName>
            </value>
            <value>
                <fullName>Presque tous les jours</fullName>
            </value>
            <value>
                <fullName>1 à 2 fois par semaine</fullName>
            </value>
            <value>
                <fullName>1 à 3 fois par mois</fullName>
            </value>
            <value>
                <fullName>Moins souvent</fullName>
            </value>
            <value>
                <fullName>Jamais</fullName>
            </value>
            <value>
                <fullName>NSP/Refus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>