force-app/main/default/objects/Individu_Paneliste__c/fields/ID_Google__c.field-meta.xml
<CustomField>
    <fullName>ID_Google__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Google</label>
    <length>233</length>
    <type>Text</type>
</CustomField>