force-app/main/default/objects/Individu_Paneliste__c/fields/Individu_Paneliste_ExtId_SIPanel_c__c.field-meta.xml
<CustomField>
    <fullName>Individu_Paneliste_ExtId_SIPanel_c__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>&quot;(UUID + ‘~’ + UID) c&apos;est une concatenation faite dans mulesoft de UUID et UID avec un tilde entre les 2 valeurs
Ce champ sert a faire l&apos;Upsert de Individu Panéliste&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Individu_Paneliste_ExtId_SIPanel__c</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>