force-app/main/default/objects/Individu_Paneliste__c/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Lien</label>
    <type>Url</type>
</CustomField>