force-app/main/default/objects/Individu_Paneliste__c/fields/Lien_meter__c.field-meta.xml
<CustomField>
    <fullName>Lien_meter__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Lien meter</label>
    <length>233</length>
    <type>Text</type>
</CustomField>