force-app/main/default/objects/Individu_Paneliste__c/fields/Mesure_google__c.field-meta.xml
<CustomField>
    <fullName>Mesure_google__c</fullName>
    <formula>IF(YEAR(TODAY()) - YEAR(Composition_du_foyer__r.Birthdate)&gt;14, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mesure google</label>
    <type>Checkbox</type>
</CustomField>