force-app/main/default/objects/Individu_Paneliste__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile</label>
    <type>Checkbox</type>
</CustomField>