force-app/main/default/objects/Individu_Paneliste__c/fields/Nombre_de_jour_de_presence_par_mois__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jour_de_presence_par_mois__c</fullName>
    <label>Nombre de jour de présence par mois</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>