force-app/main/default/objects/Individu_Paneliste__c/fields/Nombre_de_mois_d_anciennete__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_mois_d_anciennete__c</fullName>
    <formula>((YEAR(TODAY()) - YEAR(Date_d_entree_de_l_individu__c) - 1) *12) + (12 - MONTH(Date_d_entree_de_l_individu__c) +1) + MONTH(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de mois d&apos;ancienneté</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>