force-app/main/default/objects/Individu_Paneliste__c/fields/Pr_sence_permanente__c.field-meta.xml
<CustomField>
    <fullName>Pr_sence_permanente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence permanente</label>
    <type>Checkbox</type>
</CustomField>