force-app/main/default/objects/Individu_Paneliste__c/fields/Routeur__c.field-meta.xml
<CustomField>
    <fullName>Routeur__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Routeur</label>
    <type>Checkbox</type>
</CustomField>