force-app/main/default/objects/Individu_Paneliste__c/fields/Signature_convention_individuelle_Meter__c.field-meta.xml
<CustomField>
    <fullName>Signature_convention_individuelle_Meter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature convention individuelle Meter</label>
    <type>Date</type>
</CustomField>