force-app/main/default/objects/Individu_Paneliste__c/fields/Solde_de_points_idvpan__c.field-meta.xml
<CustomField>
    <fullName>Solde_de_points_idvpan__c</fullName>
    <formula>Nombre_de_points_cr_dit_s__c - Nombre_de_points_d_bit_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solde de points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>