force-app/main/default/objects/Individu_Paneliste__c/fields/TV__c.field-meta.xml
<CustomField>
    <fullName>TV__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TV</label>
    <type>Checkbox</type>
</CustomField>