force-app/main/default/objects/Individu_Paneliste__c/validationRules/RV02_lettre_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_lettre_obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
    ISBLANK(Date_de_chute_de_l_individu__c),
    ISPICKVAL(Lettre__c, &apos;&apos;),
				OR((TEXT(Foyer_paneliste__r.Referentiel_Panel__r.Type_de_panel__c) = $Label.RFP_TypePanel_MMAT),
						(TEXT(Foyer_paneliste__r.Referentiel_Panel__r.Type_de_panel__c) = $Label.RFP_TypePanel_PaME))
)</errorConditionFormula>
    <errorMessage>Le champ lettre est obligatoire</errorMessage>
</ValidationRule>