force-app/main/default/objects/Individu_Paneliste__c/validationRules/RV03_CSP42_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_CSP42_Obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
    !$User.Bypass_RDD__c,
				AND(
        Composition_du_foyer__r.CSP42__c = &apos;&apos;,       
        ISPICKVAL(Composition_du_foyer__r.Type__c, &apos;1&apos;),
        NOT(ISNEW())
    )

)</errorConditionFormula>
    <errorMessage>Le champ CSP42 est obligatoire pour ajouter un individu panéliste. (A renseigner sur la fiche de la composition du foyer).</errorMessage>
</ValidationRule>