force-app/main/default/objects/Individu_Paneliste__c/validationRules/RV05_FoyerPaneliste_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV05_FoyerPaneliste_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$User.Bypass_validation_rules__c,
Foyer_paneliste__c = null,
Date_de_chute_de_l_individu__c = null
)</errorConditionFormula>
    <errorDisplayField>Foyer_paneliste__c</errorDisplayField>
    <errorMessage>Le foyer Panéliste est obligatoire pour un individu panéliste non chuté.</errorMessage>
</ValidationRule>