force-app/main/default/objects/Individu_Paneliste__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Frequence_de_connexion_mobile__c</columns>
    <columns>Frequence_de_connexion_ordinateur__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type_de_panel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les individus panélistes</label>
</ListView>